crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__doc_comments_types.snap
---
source: crates/phoenix-codegen/src/typescript_tests.rs
expression: files.types
---
// Generated by Phoenix Gen — do not edit manually.

/** A registered user */
export interface User {
  id: number;
  name: string;
}

export type CreateUserBody = {
  name: string;
};
