crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__endpoint_with_errors_client.snap
---
source: crates/phoenix-codegen/src/typescript_tests.rs
expression: files.client
---
// Generated by Phoenix Gen — do not edit manually.

import type { CreateUserBody, User } from "./types";

export class ApiError extends Error {
  constructor(
    public readonly code: string,
    public readonly status: number,
    public readonly body: string,
  ) {
    super(`${code} (${String(status)}): ${body}`);
    this.name = "ApiError";
  }
}

export let baseUrl = "";

export function setBaseUrl(url: string): void {
  baseUrl = url;
}

export const api = {
  async createUser(body: CreateUserBody): Promise<User> {
    const response = await fetch(`${baseUrl}/api/users`, {
      method: "POST",
      headers: { "Content-Type": "application/json" },
      body: JSON.stringify(body),
    });
    if (!response.ok) {
      const errorBody = await response.text();
      if (response.status === 400)
        throw new ApiError("ValidationError", 400, errorBody);
      if (response.status === 409)
        throw new ApiError("Conflict", 409, errorBody);
      throw new ApiError("Unknown", response.status, errorBody);
    }
    return (await response.json()) as User;
  },
};
