crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__endpoint_with_errors_types.snap
---
source: crates/phoenix-codegen/src/typescript_tests.rs
expression: files.types
---
// Generated by Phoenix Gen — do not edit manually.

export interface User {
  id: number;
  name: string;
  email: string;
}

export type CreateUserBody = {
  name: string;
  email: string;
};

export type CreateUserError = "ValidationError" | "Conflict";

export const CreateUserErrors = {
  ValidationError: 400,
  Conflict: 409,
} as const;
