crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__get_with_path_param_handlers.snap
---
source: crates/phoenix-codegen/src/typescript_tests.rs
expression: files.handlers
---
// Generated by Phoenix Gen — implement the handler methods below.

import type { User } from "./types";

export interface Handlers {
  getUser(id: string): Promise<User>;
}
