crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__get_with_query_all_optional_client.snap
---
source: crates/phoenix-codegen/src/typescript.rs
expression: files.client
---
// Generated by Phoenix Gen — do not edit manually.

import type { User } from "./types";

export let baseUrl = "";

export function setBaseUrl(url: string): void {
  baseUrl = url;
}

export const api = {
  async listUsers(opts?: {
    page?: number;
    limit?: number;
    search?: string | undefined;
  }): Promise<User[]> {
    const params = new URLSearchParams();
    if (opts?.page !== undefined) params.set("page", String(opts.page));
    if (opts?.limit !== undefined) params.set("limit", String(opts.limit));
    if (opts?.search !== undefined) params.set("search", String(opts.search));
    const query = params.toString();
    const response = await fetch(
      `${baseUrl}/api/users${query ? `?${query}` : ""}`,
      {
        method: "GET",
      },
    );
    if (!response.ok) {
      throw new Error(`${String(response.status)}: ${response.statusText}`);
    }
    return (await response.json()) as User[];
  },
};
