crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__get_with_query_all_optional_handlers.snap
---
source: crates/phoenix-codegen/src/typescript.rs
expression: files.handlers
---
// Generated by Phoenix Gen — implement the handler methods below.

import type { User } from "./types";

export interface Handlers {
  listUsers(query: {
    page: number;
    limit: number;
    search?: string | undefined;
  }): Promise<User[]>;
}
