crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__list_response_client.snap
---
source: crates/phoenix-codegen/src/typescript.rs
expression: files.client
---
// Generated by Phoenix Gen — do not edit manually.

import type { User } from "./types";

export let baseUrl = "";

export function setBaseUrl(url: string): void {
  baseUrl = url;
}

export const api = {
  async listUsers(): Promise<User[]> {
    const response = await fetch(`${baseUrl}/api/users`, {
      method: "GET",
    });
    if (!response.ok) {
      throw new Error(`${String(response.status)}: ${response.statusText}`);
    }
    return (await response.json()) as User[];
  },
};
